parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__snapshot_test_lexer_and_errors@subscript.py-2.snap
---
source: parser/src/lexer/lexer.rs
description: "values = list_of_key_stats[1::2]"
input_file: parser/test_data/inputs/one_liners/subscript.py
---
[
    Token {
        kind: Identifier,
        value: Str(
            "values",
        ),
        start: 0,
        end: 6,
    },
    Token {
        kind: Assign,
        value: None,
        start: 7,
        end: 8,
    },
    Token {
        kind: Identifier,
        value: Str(
            "list_of_key_stats",
        ),
        start: 9,
        end: 26,
    },
    Token {
        kind: LeftBrace,
        value: None,
        start: 26,
        end: 27,
    },
    Token {
        kind: Integer,
        value: Number(
            "1",
        ),
        start: 27,
        end: 28,
    },
    Token {
        kind: Colon,
        value: None,
        start: 28,
        end: 29,
    },
    Token {
        kind: Colon,
        value: None,
        start: 29,
        end: 30,
    },
    Token {
        kind: Integer,
        value: Number(
            "2",
        ),
        start: 30,
        end: 31,
    },
    Token {
        kind: RightBrace,
        value: None,
        start: 31,
        end: 32,
    },
]
