parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__snapshot_test_lexer_and_errors@subscript.py-8.snap
---
source: parser/src/lexer/mod.rs
description: "a[::]"
input_file: parser/test_data/inputs/one_liners/subscript.py
---
[
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 0,
        end: 1,
    },
    Token {
        kind: LeftBrace,
        value: None,
        start: 1,
        end: 2,
    },
    Token {
        kind: Colon,
        value: None,
        start: 2,
        end: 3,
    },
    Token {
        kind: Colon,
        value: None,
        start: 3,
        end: 4,
    },
    Token {
        kind: RightBrace,
        value: None,
        start: 4,
        end: 5,
    },
]
