parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__snapshot_test_lexer_and_errors@subscript.py-9.snap
---
source: parser/src/lexer/mod.rs
description: "a[b, c:d:e, f]"
input_file: parser/test_data/inputs/one_liners/subscript.py
---
[
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 0,
        end: 1,
    },
    Token {
        kind: LeftBrace,
        value: None,
        start: 1,
        end: 2,
    },
    Token {
        kind: Identifier,
        value: Str(
            "b",
        ),
        start: 2,
        end: 3,
    },
    Token {
        kind: Comma,
        value: None,
        start: 3,
        end: 4,
    },
    Token {
        kind: Identifier,
        value: Str(
            "c",
        ),
        start: 5,
        end: 6,
    },
    Token {
        kind: Colon,
        value: None,
        start: 6,
        end: 7,
    },
    Token {
        kind: Identifier,
        value: Str(
            "d",
        ),
        start: 7,
        end: 8,
    },
    Token {
        kind: Colon,
        value: None,
        start: 8,
        end: 9,
    },
    Token {
        kind: Identifier,
        value: Str(
            "e",
        ),
        start: 9,
        end: 10,
    },
    Token {
        kind: Comma,
        value: None,
        start: 10,
        end: 11,
    },
    Token {
        kind: Identifier,
        value: Str(
            "f",
        ),
        start: 12,
        end: 13,
    },
    Token {
        kind: RightBrace,
        value: None,
        start: 13,
        end: 14,
    },
]
