parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__snapshot_test_lexer_and_errors@subscript.py.snap
---
source: parser/src/lexer/mod.rs
description: "indices = list_of_key_stats[0::2]"
input_file: parser/test_data/inputs/one_liners/subscript.py
---
[
    Token {
        kind: Identifier,
        value: Str(
            "indices",
        ),
        start: 0,
        end: 7,
    },
    Token {
        kind: Assign,
        value: None,
        start: 8,
        end: 9,
    },
    Token {
        kind: Identifier,
        value: Str(
            "list_of_key_stats",
        ),
        start: 10,
        end: 27,
    },
    Token {
        kind: LeftBrace,
        value: None,
        start: 27,
        end: 28,
    },
    Token {
        kind: Integer,
        value: Number(
            "0",
        ),
        start: 28,
        end: 29,
    },
    Token {
        kind: Colon,
        value: None,
        start: 29,
        end: 30,
    },
    Token {
        kind: Colon,
        value: None,
        start: 30,
        end: 31,
    },
    Token {
        kind: Integer,
        value: Number(
            "2",
        ),
        start: 31,
        end: 32,
    },
    Token {
        kind: RightBrace,
        value: None,
        start: 32,
        end: 33,
    },
]
