parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__snapshot_test_lexer_and_errors@with.py-2.snap
---
source: parser/src/lexer/mod.rs
description: "with a as b: pass"
input_file: parser/test_data/inputs/one_liners/with.py
---
[
    Token {
        kind: With,
        value: None,
        start: 0,
        end: 4,
    },
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 5,
        end: 6,
    },
    Token {
        kind: As,
        value: None,
        start: 7,
        end: 9,
    },
    Token {
        kind: Identifier,
        value: Str(
            "b",
        ),
        start: 10,
        end: 11,
    },
    Token {
        kind: Colon,
        value: None,
        start: 11,
        end: 12,
    },
    Token {
        kind: Pass,
        value: None,
        start: 13,
        end: 17,
    },
]
